# waswolf

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yaml
src/: commands.rs  lib.rs  main.rs  messages.rs  metrics.rs  notifier.rs  reactions.rs  roles.rs  rounds.rs  sms.rs  storage.rs  util.rs
src/commands/: add_role.rs  help.rs  list_roles.rs  remove_role.rs  werewolf.rs
src/commands/add_role/: sm.rs
src/commands/werewolf/: sm.rs
src/messages/: chained.rs  single_transition.rs  traits.rs
src/roles/: cfg_reactions.rs  distribute.rs  roles_msg.rs
src/rounds/: sm.rs  state.rs
src/rounds/state/: channels.rs  start.rs  states.rs  stop.rs  traits.rs
src/storage/: cache.rs  discord.rs
src/util/: help.rs  mods.rs  msgs.rs  roles.rs
statemachines/: Cargo.toml
statemachines/src/: chained.rs  lib.rs  next.rs  traits.rs  withlazystate.rs  withstate.rs
