[package]
name = "werewolf-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12", features = ["full"] }
serenity = { version = "0.10", default_features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend", "framework", "standard_framework"] }
async-trait = { version = "0.1" }
rand = { version = "0.8" }

# Serialization
serde = { version = "1.0" }
serde_json = { version = "1.0" }

# Tracing
tracing = { version = "0.1" }
tracing-futures = { version = "0.2" }
tracing-subscriber = { version = "0.2" }
